Added ffmpeg package to workspace container

--- a/workspace/Dockerfile
+++ b/workspace/Dockerfile
@@ -783,6 +783,19 @@ RUN apt-get update -yqq \
     && apt-get -yqq install nasm 
 
 ###########################################################################
+# ffmpeg
+###########################################################################
+
+USER root
+
+ARG INSTALL_FFMPEG=true
+
+RUN if [ ${INSTALL_FFMPEG} = true ]; then \
+    apt-get update -yqq \
+    && apt-get -yqq install ffmpeg \
+;fi
+
+###########################################################################
 # Dusk Dependencies:
 ###########################################################################
 
