--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -173,6 +173,9 @@ services:
         - ${NGINX_HOST_LOG_PATH}:/var/log/nginx
         - ${NGINX_SITES_PATH}:/etc/nginx/sites-available
         - ${NGINX_HTPASSWD}:/etc/nginx/.htpasswd
+        - ${NGINX_SSL_CERT}:/etc/nginx/server.crt
+        - ${NGINX_SSL_KEY}:/etc/nginx/server.key
+        - ${NGINX_SSL_ROOTCA_CERT}:/etc/nginx/ffmpeg_cluster_root_ca.pem
       ports:
         - "${NGINX_HOST_HTTP_PORT}:80"
         - "${NGINX_HOST_HTTPS_PORT}:443"
