Changed hostnames to IP addresses on loadbalancer.conf

--- a/nginx/sites/loadbalancer.conf
+++ b/nginx/sites/loadbalancer.conf
@@ -1,15 +1,15 @@
 upstream backend {
-   server ffmpeg021; 
-   server ffmpeg022; 
-   server ffmpeg023; 
-   server ffmpeg024; 
+   server 10.21.208.21;
+   server 10.21.53.17;
+   server 10.20.223.145;
+   server 10.20.203.19;
 }
 
-# This server accepts all traffic to port 80 and passes it to the upstream. 
+# This server accepts all traffic to port 80 and passes it to the upstream.
 # Notice that the upstream name and the proxy_pass need to match.
 
 server {
-   listen 443 ssl; 
+   listen 443 ssl;
 
    location / {
       proxy_pass https://backend;
