Changed nginx server_name to only loadbalancer names

--- a/nginx/sites/ffmpeg-cluster.conf
+++ b/nginx/sites/ffmpeg-cluster.conf
@@ -6,7 +6,7 @@
 server {
     listen 443 ssl;
 
-    server_name ffmpeg022 ffmpeg022.nzbcloud.com 10.21.53.17 51.15.97.25;
+    server_name ffmpeg-lb ffmpeg-lb.nzbcloud.com;
     ssl_certificate     /etc/nginx/server.crt;
     ssl_certificate_key /etc/nginx/server.key;
     root /var/www/ffmpeg-cluster/public;
