--- a/nginx/sites/loadbalancer.conf
+++ b/nginx/sites/loadbalancer.conf
@@ -12,6 +12,7 @@ server {
    listen 443 ssl;
 
    location / {
+      proxy_set_header Host       $host;
       proxy_pass https://backend;
    }
 }
