--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -102,10 +102,10 @@ services:
         - ${NGINX_SSL_ROOTCA_CERT}:/etc/ssl/ffmpeg_cluster_root_ca.pem
       extra_hosts:
         - "dockerhost:${DOCKER_HOST_IP}"
-        - "ffmpeg021:10.21.208.21"
-        - "ffmpeg022:10.21.53.17"
-        - "ffmpeg023:10.20.223.145"
-        - "ffmpeg024:10.20.203.19"
+        - "ffmpeg021.nzbcloud.com:10.21.208.21"
+        - "ffmpeg022.nzbcloud.com:10.21.53.17"
+        - "ffmpeg023.nzbcloud.com:10.20.223.145"
+        - "ffmpeg024.nzbcloud.com:10.20.203.19"
 #      ports:
 #        - "${WORKSPACE_SSH_PORT}:22"
       tty: true
@@ -156,10 +156,10 @@ services:
         - "9000"
       extra_hosts:
         - "dockerhost:${DOCKER_HOST_IP}"
-        - "ffmpeg021:10.21.208.21"
-        - "ffmpeg022:10.21.53.17"
-        - "ffmpeg023:10.20.223.145"
-        - "ffmpeg024:10.20.203.19"
+        - "ffmpeg021.nzbcloud.com:10.21.208.21"
+        - "ffmpeg022.nzbcloud.com:10.21.53.17"
+        - "ffmpeg023.nzbcloud.com:10.20.223.145"
+        - "ffmpeg024.nzbcloud.com:10.20.203.19"
       environment:
         - PHP_IDE_CONFIG=${PHP_IDE_CONFIG}
         - DOCKER_HOST=tcp://docker-in-docker:2375
